# rage-pad

./: .gitignore  CLAUDE.md  README.md  nodemon.json  package-lock.json  package.json  tsconfig.server.json
.claude/: settings.local.json
.github/workflows/: android-build.yml
audio-engine/: Cargo.toml
audio-engine/src/: devices.rs  main.rs  mixer.rs  protocol.rs  ptt.rs
client/: .gitignore  README.md  angular.json  capacitor.config.ts  package-lock.json  package.json  proxy.conf.js
client/android/app/: build.gradle
client/src/: index.html  styles.scss
client/src/app/: app.component.html  app.component.scss  app.component.ts
client/src/app/components/add-category-modal/: add-category-modal.component.html  add-category-modal.component.scss  add-category-modal.component.ts
client/src/app/components/add-sound-modal/: add-sound-modal.component.html  add-sound-modal.component.scss  add-sound-modal.component.ts
client/src/app/components/category-select/: category-select.component.html  category-select.component.scss  (+1 more)
client/src/app/models/: sound.model.ts
client/src/app/services/: auth.service.ts  sound.service.ts  soundpad.service.ts
client/src/environments/: environment.ts
scripts/: android-run.js  copy-runtime-deps.js  install-jdk.ps1  release.ps1  release.sh  with-jdk.js
src-tauri/: Cargo.toml  installer-hooks.nsi  tauri.android.conf.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/server/: audio-engine.ts  database.ts  hotkey-manager.ts  index.ts  routes.ts  sound-db.ts  soundpad-client.ts  store-sync.ts
(+53 files in other folders)
