[package]
name = "rage-pad"
version = "0.1.0"
description = "Soundpad controller with Angular frontend"
edition = "2021"

[lib]
name = "rage_pad_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "rage-pad"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
