[package]
name = "ragepad"
version = "0.1.0"
description = "Sound board with Angular frontend and WASAPI audio engine"
edition = "2021"

[lib]
name = "ragepad_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "ragepad"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
